@@ -8,6 +8,12 @@ Notes:
   - http://msdn.microsoft.com/en-us/library/windows/desktop/ms679351(v=vs.85).aspx
   - http://blogs.msdn.com/b/oldnewthing/archive/2007/11/28/6564257.aspx
 
+20160823
+* worked on tests
+
+20160822
+* worked on tests
+
 20160821
 * worked on tests
 
